--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/WorkTimeCount.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/WorkTimeCount.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="WorkTimeCount" Height="900" Width="305" ResizeMode="NoResize" SizeToContent="Height"
         ShowInTaskbar="False" MouseMove="BlurWindow_MouseMove" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Name="main" 
-        MouseUp="main_MouseUp" Closing="main_Closing">
+        MouseLeave="main_MouseLeave" Topmost="True" PreviewMouseDown="main_MouseDown">
     <Window.Resources>
         <Storyboard x:Key="hiddenAnimation">
             <DoubleAnimation Storyboard.TargetName="main" Storyboard.TargetProperty="(Window.Left)" Duration="0:0:0.5" AutoReverse="False">
@@ -42,7 +42,7 @@
         </Grid>
 
         <ListBox Grid.Column="1" Background="Transparent" Name="list_WorkItems" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
-                    Width="{Binding ElementName=canvas,Path=ActualWidth}" Height="{Binding ElementName=canvas,Path=ActualHeight}">
+                    Width="{Binding ElementName=canvas,Path=ActualWidth}" Height="{Binding ElementName=canvas,Path=ActualHeight}" PreviewMouseDown="main_MouseDown">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <controls:WorkTimeItemControl Margin="0" Data="{Binding}" Height="30"></controls:WorkTimeItemControl>
