--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/MouseEffect.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/MouseEffect.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Master_Zhao.Shell.Pages"
+      xmlns:uc="clr-namespace:Master_Zhao.Shell.View.Beautify.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MouseEffect">
@@ -21,6 +22,7 @@
                         <CheckBox Content="启用鼠标特效(beta)" Margin="5" Checked="mouseEffect_Checked" Unchecked="mouseEffect_Unchecked"/>
                     </WrapPanel>
                 </GroupBox>
+                <uc:MouseEffectItemControl Width="300" Height="300" Title="跟随" PreviewImage="C:\Users\xi\Desktop\fastrun.mp4"></uc:MouseEffectItemControl>
             </StackPanel>
         </ScrollViewer>
     </Grid>
