add disk file management page

--- a/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/SystemManagement.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/SystemManagement.xaml
@@ -26,11 +26,12 @@
 
             <StackPanel Grid.Row="1">
                 <ToggleButton Content="开机启动项管理" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StartupMgmtClick" IsChecked="True"/>
+                <ToggleButton Content="磁盘文件管理" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_DiskFileMgmtClick" IsChecked="False"/>
             </StackPanel>
         </Grid>
 
         <Grid Grid.Column="1">
-            <Frame Name="frame" Source="./Pages/StartupManagement.xaml">
+            <Frame Name="frame" Source="./Pages/StartupManagement.xaml" NavigationUIVisibility="Hidden">
 
             </Frame>
         </Grid>
