--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/MouseEffect.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/MouseEffect.xaml
@@ -19,10 +19,10 @@
                     </GroupBox.Header>
 
                     <WrapPanel Margin="0,35,0,0">
-                        <CheckBox Content="启用鼠标特效(beta)" Margin="5" Checked="mouseEffect_Checked" Unchecked="mouseEffect_Unchecked"/>
+                        <CheckBox Content="启用鼠标特效(beta)" Margin="5" Checked="mouseEffect_Checked" Unchecked="mouseEffect_Unchecked" Name="cbx_EnableMouseEffect"/>
                     </WrapPanel>
                 </GroupBox>
-                <WrapPanel>
+                <WrapPanel IsEnabled="{Binding ElementName=cbx_EnableMouseEffect,Path=IsChecked}">
                     <uc:MouseEffectItemControl Width="300" Height="300" Title="跟随" PreviewImage="../../../Icon/MouseEffect/followingdot.png" MouseEffectType="FollowingDot" Margin="10" OnSet="MouseEffectItemControl_OnSet"></uc:MouseEffectItemControl>
                     <uc:MouseEffectItemControl Width="300" Height="300" Title="轨迹" PreviewImage="../../../Icon/MouseEffect/cursortrail.png" MouseEffectType="CursorTrail" Margin="10" OnSet="MouseEffectItemControl_OnSet"></uc:MouseEffectItemControl>
                 </WrapPanel>
