--- a/Master-Zhao/Master-Zhao.Shell/Themes/Night1.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Themes/Night1.xaml
@@ -20,4 +20,5 @@
     <Color x:Key="BorderColor">#FF737373</Color>
     <Color x:Key="BorderColorTran" A="120" R="115" G="115" B="115"></Color>
     <Color x:Key="AccentBaseColorShadowColor">#D597CE</Color>
+    <Color x:Key="ItemSelectedColor">#D597CE</Color>
 </ResourceDictionary>
