--- a/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/UserControls/DiskDetailControl.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/UserControls/DiskDetailControl.xaml
@@ -7,7 +7,7 @@
              xmlns:controls="clr-namespace:Master_Zhao.Shell.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Name="stack" Background="Transparent">
+    <StackPanel Name="stack" Background="Transparent" Margin="0,0,0,10">
         <StackPanel.Triggers>
             <EventTrigger RoutedEvent="MouseEnter">
                 <BeginStoryboard>
@@ -30,13 +30,13 @@
         </Grid>
         <Grid>
             <Label Content="空间占比："></Label>
-            <controls:PercentageBar x:Name="percentageBar" Width="200" Height="15" VerticalAlignment="Center" Maximum="100" Value="50" Text="10%" HorizontalAlignment="Left" Margin="105,0,0,0"></controls:PercentageBar>
+            <controls:PercentageBar x:Name="percentageBar" Width="250" Height="15" VerticalAlignment="Center" Maximum="100" Value="50" Text="10%" HorizontalAlignment="Left" Margin="75,0,0,0"></controls:PercentageBar>
         </Grid>
-        <Grid>
+        <Grid Visibility="Collapsed">
             <Label Content="文件夹总数："></Label>
             <Label Name="lbl_DirCount" Content="" HorizontalAlignment="Left" Margin="100,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontFamily="Arial"></Label>
         </Grid>
-        <Grid>
+        <Grid Visibility="Collapsed">
             <Label Content="文件总数："></Label>
             <Label Name="lbl_FileCount" Content="" HorizontalAlignment="Left" Margin="100,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontFamily="Arial"></Label>
         </Grid>
